--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link href="src/styles.css" rel="stylesheet" />
   </head>
 
   <body>
